--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <div id="disqus_thread"></div>
 <script type="text/javascript">
 	var disqus_shortname = '{{ site.theme_settings.disqus_shortname }}';
@@ -32,4 +32,22 @@ s.setAttribute('data-timestamp', +new Date());
 </script>
 
 
-<noscript>{{ site.theme_settings.str_javascript_required_disqus }}</noscript>
+<noscript>{{ site.theme_settings.str_javascript_required_disqus }}</noscript> -->
+
+
+{% if page.comments == true %}
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+  var disqus_shortname  = '{{ site.disqus_shortname }}';
+  var disqus_identifier = 'doducthao.github.io' + '{{ page.url }}';
+
+  (function() {
+    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+  })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+{% endif %}
+
+    <script id="dsq-count-scr" src="//tiepvu.disqus.com/count.js" async></script>
