--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -50,4 +50,4 @@ s.setAttribute('data-timestamp', +new Date());
 <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 {% endif %}
 
-    <script id="dsq-count-scr" src="//tiepvu.disqus.com/count.js" async></script>
+    <script id="dsq-count-scr" src="//ducthaodo.disqus.com/count.js" async></script>
