--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,4 +1,4 @@
-<!-- 
+
 <div id="disqus_thread"></div>
 <script type="text/javascript">
 	var disqus_shortname = '{{ site.theme_settings.disqus_shortname }}';
@@ -14,7 +14,7 @@ this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your pag
 */
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
-s.src = 'https://tu-hoc-ai.disqus.com/embed.js';
+s.src = 'https://doducthao.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
@@ -32,10 +32,10 @@ s.setAttribute('data-timestamp', +new Date());
 </script>
 
 
-<noscript>{{ site.theme_settings.str_javascript_required_disqus }}</noscript> -->
+<noscript>{{ site.theme_settings.str_javascript_required_disqus }}</noscript>
 
 
-{% if page.comments == true %}
+<!-- {% if page.comments != false %}
 <div id="disqus_thread"></div>
 <script type="text/javascript">
   var disqus_shortname  = '{{ site.disqus_shortname }}';
@@ -50,4 +50,4 @@ s.setAttribute('data-timestamp', +new Date());
 <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 {% endif %}
 
-    <script id="dsq-count-scr" src="//ducthaodo.disqus.com/count.js" async></script>
+    <script id="dsq-count-scr" src="//doducthao.disqus.com/count.js" async></script> -->
