--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
         src="https://c.statcounter.com/12347645/0/327b8552/0/"
         alt="web counter"></a></div></noscript>
         <!-- End of Statcounter Code -->
-        <a href="https://statcounter.com/p12347645/?guest=1">Total visits
+        <a href="https://statcounter.com/p12347645/?guest=1">Total Visits
         </a>
 </footer>
 
